re PR tree-optimization/21171 (IV OPTS removes does not create a new VOPs for constant values)

PR tree-optimization/21171
	* tree-ssa-loop-ivopts.c (find_interesting_uses_address): Do not
	record address uses if the reference is volatile.

	* gcc.dg/tree-ssa/pr21171.c: New test.

From-SVN: r100895